--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 <div class="contact-left">
                     <h1 class="sub-title">Contact Me</h1>
                     <p><i class="fa-solid fa-inbox"></i>oshersteel@gmail.com</p>
-                    <p><i class="fa-regular fa-phone"></i>7864453842</p>
+                    <p><i class="fa-solid fa-phone"></i>786-445-3842</p>
                     <div class="social-icons">
                         <a href="https://github.com/osher-steel"><i class="fa-brands fa-github"></i></a>
                         <a href="www.linkedin.com/in/osher-steel"><i class="fa-brands fa-linkedin"></i></i></a>
@@ -125,7 +125,7 @@
                 </div>
             </div>
         </div>   
-        <span id="msg">hello</span>
+        <span id="msg"></span>
     </div>
 
     <script>
