--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Osher Steel</title>
     <link rel="stylesheet" href="./style.css">
   </head>
-   
+
   <body>
     <div id="header">
         <div class="container">
@@ -36,7 +36,7 @@
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
                     <p>
-                        I was born in Peru, raised in France, and am currently studying in Florida. Since adding Computer Science as a major in fall 2021, I have developped a passion for the art of programming. While being a college student can sometimes be very time consuming, I like to work on fun personal projects and learn about frameworks and databases when I have free time.
+                        Born in Lima Peru, raised in France and studying in Florida. Since adding Computer Science as a major in fall 2021, I have developped a passion for the art of programming. While being a college student can sometimes be very time consuming, I like to work on fun personal projects and learn about frameworks and databases when I have free time.
                     </p>
                     <div class="tab-titles">
                         <p class="tab-links active-link" onclick="opentab('skills')"> Programming Skills</p>
@@ -46,7 +46,7 @@
                     <div class= "tab-contents active-tab" id="skills">
                         <ul>
                             <li><span>Languages:</span><br>C++, Java, HTML, CSS, JavaScript</li>
-                            <li><span>Frameworks/Libraries:</span><br>SFML, Swing, Spring Boot, Java Servlets</li>
+                            <li><span>Frameworks/Libraries:</span><br>SFML, Swing, Git, Java Servlets</li>
                             <li><span>Databases:</span><br> MySQL</li>
                         </ul>
                     </div>
@@ -60,7 +60,7 @@
                     </div>
                     <div class= "tab-contents" id="experience">
                         <ul>
-                            <li><span>Legends Hospitality (10/22-current)</span><br>Currently working part-time as a server and barback during special events at the Bobby Bowden stadium in Tallahassee.</li>
+                            <li><span>Legends Hospitality (10/current)</span><br>Currently working part-time as a server and barback during special events at the Bobby Bowden stadium in Tallahasse</li>
                             <li><span>Summer Camp Manager (summers of 2020 and 2021)</span><br>Created and managed a summer camp in Miami that registered around 30 kids.</li>
 
                         </ul>
@@ -69,9 +69,6 @@
             </div>
         </div>
     </div>
-
-    <!-- ---------------------PROJECTS------------------ -->
-
     <div id="projects">
         <div class="container">
             <h1 class="sub-title">Projects</h1>
@@ -90,7 +87,7 @@
                     <img src="images/checkers.png">
                     <div class="layer">
                         <div class="text">
-                            <h3>Checkers GUI</h3>
+                            <h3>Checkers Application</h3>
                             <p>A checkers desktop application written in C++ using SFML</p>
                         </div>
                     </div>
@@ -110,7 +107,7 @@
                     <p><i class="fa-solid fa-phone"></i>786-445-3842</p>
                     <div class="social-icons">
                         <a href="https://github.com/osher-steel"><i class="fa-brands fa-github"></i></a>
-                        <a href="www.linkedin.com/in/osher-steel"><i class="fa-brands fa-linkedin"></i></i></a>
+                        <a href="https://www.linkedin.com/in/osher-steel-9b1740226/"><i class="fa-brands fa-linkedin"></i></i></a>
                     </div>
                     <a href="images/resume.pdf" class="btn">Download CV</a>
                 </div>
@@ -124,7 +121,7 @@
                     </form>
                 </div>
             </div>
-        </div>   
+        </div>
         <span id="msg"></span>
     </div>
 
@@ -150,8 +147,6 @@
         const scriptURL = 'https://script.google.com/macros/s/AKfycbwfrDS-R42HLEVjjpQDlZ1s06ZoCALuTFKst2ZPpSl7epEdm8J7B9rq446gydkpeSpxDw/exec'
         const form = document.forms['submit-to-google-sheet']
 
-        var msg= document.getElementById("msg");
-      
         form.addEventListener('submit', e => {
           e.preventDefault()
           fetch(scriptURL, { method: 'POST', body: new FormData(form)})
