--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     </div>
                     <div class= "tab-contents" id="experience">
                         <ul>
-                            <li><span>Legends Hospitality (10/current)</span><br>Currently working part-time as a server and barback during special events at the Bobby Bowden stadium in Tallahasse</li>
+                            <li><span>Legends Hospitality (10/current)</span><br>Currently working part-time as a server and barback during special events at the Bobby Bowden stadium in Tallahassee</li>
                             <li><span>Summer Camp Manager (summers of 2020 and 2021)</span><br>Created and managed a summer camp in Miami that registered around 30 kids.</li>
 
                         </ul>
