--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
                     <div class= "tab-contents active-tab" id="skills">
                         <ul>
                             <li><span>Languages:</span><br>C++, Java, HTML, CSS, JavaScript</li>
-                            <li><span>Frameworks/Libraries:</span><br>SFML, Swing, Git, Java Servlets</li>
-                            <li><span>Databases:</span><br> MySQL</li>
+                            <li><span>Frameworks/Libraries:</span><br>SFML, Swing, Git</li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="education">
