--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
                     </div>
                     <div class= "tab-contents active-tab" id="skills">
                         <ul>
-                            <li><span>Languages:</span><br>C++, Java, HTML, CSS, JavaScript</li>
-                            <li><span>Frameworks/Libraries:</span><br>SFML, Swing, Git</li>
+                            <li><span>Languages:</span><br>C++, Java, HTML, CSS, PHP, SQL, JavaScript</li>
+                            <li><span>Frameworks/Libraries:</span><br>SFML, Swing, Git, Java Servlets</li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="education">
                         <ul>
-                            <li><span>Florida State University (Expected Graduation: 2024)</span>
+                            <li><span>Florida State University (Expected Graduation: May 2024)</span>
                                 <br> B.A in Computer Science and B.S. in Marketing<br>
                             </li>
                             <li><span>  Involvement:</span><br> Starting Player of the FSU Rugby Team<br>Member of the ACM(Association for Computer Machinery) at FSU</li>
@@ -59,7 +59,7 @@
                     </div>
                     <div class= "tab-contents" id="experience">
                         <ul>
-                            <li><span>Legends Hospitality (10/current)</span><br>Currently working part-time as a server and barback during special events at the Bobby Bowden stadium in Tallahassee</li>
+                            <li><span>Legends Hospitality (10/22-current)</span><br>Currently working part-time as a server and barback during special events at the Bobby Bowden stadium in Tallahasse</li>
                             <li><span>Summer Camp Manager (summers of 2020 and 2021)</span><br>Created and managed a summer camp in Miami that registered around 30 kids.</li>
 
                         </ul>
@@ -88,6 +88,16 @@
                         <div class="text">
                             <h3>Checkers Application</h3>
                             <p>A checkers desktop application written in C++ using SFML</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="project">
+                    <img src="images/tetris.png">
+                    <div class="layer">
+                        <div class="text">
+                            <h3>Tetris</h3>
+                            <p>A tetris desktop application written in Java using Swing Components</p>
+                            </a>
                         </div>
                     </div>
                 </div>
